



package enums;

public enum ComplaintCategory {
    INFRASTRUCTURE,
    CORRUPTION,
    NOISE,
    TRAFFIC,
    SANITATION,
    WATER_SUPPLY,
    ELECTRICITY
}
