



package enums;

public enum OfficerDepartment {
    ACB,                   
    MSEB,                  
    PWD,                   
    LOCAL_POLICE,          
    MUNICIPAL_CORPORATION, 
    TRAFFIC_POLICE         
}
