



package enums;

public enum Role {
    CITIZEN,
    OFFICER,
    ADMIN
}
