



package enums;

public enum Status {
    FILED,
    UNDER_REVIEW,
    RESOLVED,
    ESCALATED,
    REJECTED
}
